@startuml ClassDiagram

class "GameControl" as GameControl {
    Scanner : Scanner
    play : boolean

    Game(Scanner scanner)
}

class "Player" as Player {
    playerName : String

    getPlayerName() : String
    setPlayerBalance (int value)
    getPlayerBalance () : int
    checkPlayerBalance () : boolean

}

class "Account" as Account {
    balance : int

    addValue(int value)
    getBalance() : int
    balanceCheck() : boolean
}
note left
    Balance >= 0
    end note

class "DieCup" as Diecup {
    die : Dice[2]
    
    throwDice()
    getDiceValue() : int
    getTotalValue() : int
}

class "Die" as Dice {
    dieMin : int
    dieMax : int

    throw()
}

class "Board" as Board {
    board : Field[12]

    getEffect(Integer) : Integer
    getFieldtext(Integer) : String
    getExtraTurn(Integer) : boolean
}
enum BoardLayout{
}

class "Field" as Field {
    name : String
    effect : int
    extraTurn : boolean

    getFieldEffect() : Integer
    getExtraTurn() : boolean
    getFieldName() : String
}

class "Game" as Game{
    board : Board
    diecup : Diecup
    activePlayer : Player
    player1 : Player
    player2 : Player
}


Player *--> "1" Account : account
GameControl *--> "1" Game
Game *--> "2" Player 
Game *--> "1" Board
Board <-r- BoardLayout
Board  *--> "11" Field
Game  *--> "1" Diecup
Diecup *--> "2" Dice
@enduml